--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Portfólio da Kaylany</title>
-</head>
-<body>
+  <link rel="stylesheet" href="style.css">
+  <head>
   <img src="img/avatar.png" alt="Foto da Kaylany" width="150">
 
   <h1>Olá, eu sou a Kaylany!</h1>
