--- a/index.html
+++ b/index.html
@@ -29,7 +29,24 @@
     <li>Finalize com queijo e orégano.</li>
     <li>Leve ao forno por 30 minutos.</li>
   </ol>
-
+<!-- Seção de Fotos da Lasanha -->
+<section class="galeria-lasanha">
+  <h2>📷 Fotos da Lasanha</h2>
+  <div class="galeria">
+    <div class="foto">
+      <img src="img/ingredientes.png" alt="Ingredientes da lasanha" />
+      <p>Ingredientes</p>
+    </div>
+    <div class="foto">
+      <img src="img/fazendo.png" alt="Preparando a lasanha" />
+      <p>Preparando</p>
+    </div>
+    <div class="foto">
+      <img src="img/pronta.png" alt="Lasanha pronta" />
+      <p>Lasanha pronta</p>
+    </div>
+  </div>
+                                       </section>
   <h2>💻 Meus Projetos</h2>
   <ul>
     <li><a href="#">Projeto 1: Calculadora</a></li>
