--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     a:hover {
       text-decoration: underline;
     }
-  </style>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
