--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
@@ -64,7 +64,7 @@
     a:hover {
       text-decoration: underline;
     }
-  <link rel="stylesheet" href="styles.css" />
+  </style>
 </head>
 <body>
 
@@ -128,4 +128,4 @@
   </div>
 
 </body>
-  </html>
+    </html>
