--- a/index.html
+++ b/index.html
@@ -1,131 +1,107 @@
-  <!DOCTYPE html>
-<html lang="pt-br">
+<!DOCTYPE html>
+<html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfólio da Kaylany</title>
   <style>
     body {
       font-family: Arial, sans-serif;
+      background-color: #fff;
       margin: 0;
       padding: 20px;
-      background-color: #fff8fc;
       color: #333;
     }
-
-    h1, h2 {
-      color: #8a2be2;
+    header {
+      text-align: center;
+      margin-bottom: 30px;
     }
-
-    .avatar {
-      width: 150px;
+    header img {
       border-radius: 50%;
-      display: block;
-      margin: 0 auto 20px auto;
+      width: 150px;
     }
-
-    .section {
+    h1 {
+      color: #9b4dca;
+    }
+    section {
       margin-bottom: 40px;
     }
-
-    .fotos-lasanha {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      flex-wrap: wrap;
-    }
-
-    .fotos-lasanha img {
-      width: 200px;
-      border-radius: 12px;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
-    }
-
-    .fotos-lasanha p {
+    .foto {
       text-align: center;
+      margin-bottom: 20px;
+    }
+    .foto img {
+      width: 200px;
+      border-radius: 10px;
+      box-shadow: 2px 2px 5px rgba(0,0,0,0.2);
+    }
+    .foto p {
       margin-top: 5px;
       font-weight: bold;
-    }
-
-    .projetos ul {
-      list-style-type: none;
-      padding: 0;
-    }
-
-    .projetos li {
-      margin: 5px 0;
-    }
-
-    a {
-      color: #8a2be2;
-      text-decoration: none;
-    }
-
-    a:hover {
-      text-decoration: underline;
     }
   </style>
 </head>
 <body>
 
-  <img src="img/avatar.png" alt="Avatar da Kaylany" class="avatar" />
+  <header>
+    <img src="img/avatar.png" alt="Avatar da Kaylany">
+    <h1>Portfólio da Kaylany Luana</h1>
+    <p>Estudante e desenvolvedora em formação</p>
+  </header>
 
-  <h1>Kaylany Luana</h1>
-
-  <div class="section">
-    <h2>🍝 Receita de Lasanha</h2>
+  <section>
+    <h2 style="color: #9b4dca;">🍝 Receita de Lasanha</h2>
     <h3>Ingredientes:</h3>
     <ul>
       <li>500g de carne moída</li>
-      <li>1 pacote de massa de lasanha</li>
-      <li>1 lata de molho de tomate</li>
-      <li>200g de presunto</li>
-      <li>200g de queijo mussarela</li>
+      <li>1 pacote de massa para lasanha</li>
+      <li>300g de presunto</li>
+      <li>300g de queijo mussarela</li>
+      <li>1 molho de tomate</li>
       <li>Orégano a gosto</li>
-      <li>Sal e temperos a gosto</li>
     </ul>
-
-    <h3>Modo de Preparo:</h3>
+    <h3>Modo de preparo:</h3>
     <p>
-      Cozinhe a carne com os temperos.<br />
-      Adicione o molho e deixe cozinhar por 10 minutos.<br />
-      Monte as camadas com massa, carne, presunto e queijo.<br />
-      Finalize com queijo e orégano.<br />
+      Cozinhe a carne com os temperos.<br>
+      Adicione o molho e deixe cozinhar por 10 minutos.<br>
+      Monte as camadas com massa, carne, presunto e queijo.<br>
+      Finalize com queijo e orégano.<br>
       Leve ao forno por 30 minutos.
     </p>
-  </div>
+  </section>
 
-  <div class="section">
-    <h2>📸 Fotos da Lasanha</h2>
-    <div class="fotos-lasanha">
-      <div>
-        <img src="img/ingredientes.jpg" alt="Ingredientes da lasanha" />
-        <p>Ingredientes</p>
-      </div>
-      <div>
-        <img src="img/preparando.jpg" alt="Preparando a lasanha" />
-        <p>Preparando</p>
-      </div>
-      <div>
-        <img src="img/lasanha-pronta.jpg" alt="Lasanha pronta" />
-        <p>Lasanha pronta</p>
-      </div>
+  <section>
+    <h2 style="color: #9b4dca;">📸 Fotos da Lasanha</h2>
+
+    <div class="foto">
+      <img src="img/projeto-1 (1).png" alt="Ingredientes da lasanha">
+      <p>Ingredientes</p>
     </div>
-  </div>
 
-  <div class="section projetos">
-    <h2>💻 Meus Projetos</h2>
+    <div class="foto">
+      <img src="img/projeto-2.png" alt="Preparando a lasanha">
+      <p>Preparando</p>
+    </div>
+
+    <div class="foto">
+      <img src="img/projeto-3 (1).png" alt="Lasanha pronta">
+      <p>Lasanha pronta</p>
+    </div>
+  </section>
+
+  <section>
+    <h2 style="color: #9b4dca;">💻 Meus Projetos</h2>
     <ul>
       <li>Projeto 1: Calculadora</li>
       <li>Projeto 2: Site de Receitas</li>
       <li>Projeto 3: Meu Portfólio</li>
     </ul>
-  </div>
+  </section>
 
-  <div class="section">
-    <h2>📬 Contato</h2>
+  <section>
+    <h2 style="color: #9b4dca;">📬 Contato</h2>
     <p>Email: kaylany@email.com</p>
-  </div>
+  </section>
 
 </body>
-    </html>
+                                        </html>
